[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-learning-loop"
version = "0.1.0"
description = "Generic learning loop for AI agents — accumulate lessons from execution, validate against outcomes, inject into future prompts"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "ai-awesome" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[tool.hatch.build.targets.wheel]
packages = ["src/agent_learning_loop"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
